svc_deploy_bung.yml
---
# deploy-shop
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bungbungbbang
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bungbungbbang
  template:
    metadata:
      labels:
        app: bungbungbbang
    spec:
      imagePullSecrets:
      - name: myregistrykey  # 위에서 생성한 secret 이름
      containers:
      - name: bungbungbbang
        image: dann0524/bungbungbbang:yellow
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
